CHANGES

release 77.0
 - the build file and module - code improvements, POD and PBP for the module
 - scripts and modules:
     version variable added where needed,
     RSC keywords removed,
     superfluous empty lines, 'Readonly' module import and other features removed,
     where needed, 'use Readonly' added
 - tests - remains of RSC keywords removed
 - the distribution test does not perform pod tests (separate tests available),
   checks that module version matches distribution version
 - allow staging daemon to check progress by looking for .bcl.gz files (as
   well as .bcl files)

release 76.5
 - code action on Build only if install target specified
 - global removal of [LastChanged]Version from POD; change VERSION svn declaration to ='0';
 - added modules to handle locating of transcriptome files required by tophat2
 - updated reference module with additions needed by transcriptome
 - added new test for transcriptome
 - updated reference test to check that transcriptome directory structure exists
 - added files from a transcriptomics run for use in test

release 76.4
 - replace uri_escape() by uri_escape_utf8()
 - some unused code removed
 - some small test scripts merged into related larger test scripts
 - VERSION variable and headers with SVN properties removed from test files
 - all test scripts are given .t extension 
 - unnecessary 'use' statements removed from tests
 - server-wide definition for modperl custom perl libraries location in order
   to provide consistent perl environment for all scripts at server start-up
   time

release 76.3
 - use staging area for staging daemon logs

release 76.2
 - lims samplesheet driver bug fix - spiked phix tag index should be defined for plexes
 - method to return the name of the env. var for the cached samplesheet file
 - misleading xml lims driver POD entry fixed

release 76.1
 - use scratch110 for references as scratch109 is hanging
 - extend timeout for Jenkins auto-logout

release 76.0