@@ -1,12 +1,0 @@
-<!--begin $Id: run_add_flowcell_ajax.tt2 2662 2008-08-06 12:23:37Z rmp $-->
-<label for="batch_id">Flowcell / Batch Id</label>
-[% IF model.cluster_batches %]
-<span style="float:left;width:12em;"><select id="batch_id" name="batch_id" onChange="update_lane_definition();">
-[% FOREACH batch = model.cluster_batches %]
-  <option value="[% batch.id %]" [% IF batch.id == model.batch_id %]selected="selected"[% END %]>[% batch.id %], [% batch.lane_count %] lanes</option>[% END %]
-</select></span>
-<!--label for="batch_barcode" class="secondary">barcode</label> <span style="float:left"><input type="text" id="batch_barcode" name="batch_barcode" size="14" /> &lt;find&gt;</span-->
-[% ELSE %]
-None pending
-[% END %]
-<!--end $Id: run_add_flowcell_ajax.tt2 2662 2008-08-06 12:23:37Z rmp $-->
