@@ -1,7 +1,0 @@
-<label for="id_run_pair">Paired Run</label>
-<select id="id_run_pair" name="id_run_pair">
- <option value="no">No (one runfolder)</option>
- <option value="yes">Yes - First Run</option>
- <option value="16">Second run of IL1_00016</option>
- <option value="9952">Second run of IL1_9952</option>
-</select>
